# frame-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: contribution_guide.md  problem_template.md
problems/: conftest.py
problems/001_filter_detections_by_score/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/002_sort_detections_by_score/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/003_group_detections_by_class/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/004_delete_stale_tracks/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/005_detections_to_arrays/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/006_arrays_to_detections/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/007_xyxy_to_xywh/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/008_xywh_to_xyxy/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/009_clip_boxes/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/010_box_area/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/011_iou_two_boxes/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/012_iou_one_to_many/: README.md  solution.py  starter.py  test_solution.py  test_starter.py
problems/013_iou_matrix/: README.md  solution.py  starter.py  (+2 more)
(+45 files in other folders)
