[project]
name = "frame-lab"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "torch", "torchvision"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
timeout = 30
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py310"
